--- a/templates/index.html
+++ b/templates/index.html
@@ -3,32 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="30">
-    <title>حجز موعد تصليح سيارة</title>
+    <title>حجز موعد تصليح المركبة</title>
     <style>
+        html {
+            direction: rtl;
+        }
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
+            background-color: #181A1E;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             height: 100vh;
+            font-family: sans-serif;
+            padding: 30px 0;
         }
 
         h1 {
             text-align: center;
-            color: #333;
+            color: #e0f0ff;
+            align-self: flex-start;
+            justify-self: flex-start;
         }
 
         .container {
-            background-color: #fff;
+            background-color: #1F2626;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             width: 100%;
             max-width: 500px;
+            margin: auto;
+            height: fit-content;
         }
 
         form {
@@ -39,21 +43,26 @@
         label {
             margin-bottom: 5px;
             font-size: 16px;
-            color: #555;
+            color: #e0f0ff;
         }
 
         input[type="text"], input[type="datetime-local"] {
             padding: 10px;
             margin-bottom: 15px;
-            border: 1px solid #ccc;
+            border: 1px solid #3d4b4b; /* حدود ناعمة رمادية مائلة للأخضر */
             border-radius: 5px;
             font-size: 16px;
             outline: none;
+            background-color: #2a3333; /* أفتح شوي من لون الكارد */
+            color: #f1f1f1;            /* نص أبيض فاتح */
+            transition: border 0.3s;
         }
 
         input[type="text"]:focus, input[type="datetime-local"]:focus {
             border-color: #007bff;
         }
+
+
 
         button {
             background-color: #007bff;
@@ -97,13 +106,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>حجز موعد تصليح سيارة</h1>
+        <h1>حجز موعد تصليح المركبة</h1>
         
         <form id="booking-form">
             <label for="name">اسمك:</label>
             <input type="text" id="name" name="name" required><br>
             
-            <label for="car_type">نوع سيارتك:</label>
+            <label for="car_type">نوع المركبة:</label>
             <input type="text" id="car_type" name="car_type" required><br>
 
             <label for="appointment_time">موعدك:</label>
