--- a/templates/admin.html
+++ b/templates/admin.html
@@ -9,18 +9,18 @@
             font-family: Arial, sans-serif;
             direction: rtl;
             padding: 20px;
-            background-color: #f7f7f7;
+            background-color: #181A1E;
         }
 
         h1 {
             text-align: center;
-            color: #333;
+            color: #e0f0ff;
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
-            background-color: #fff;
+            background-color: #1F2626;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
 
@@ -31,7 +31,7 @@
         }
 
         th {
-            background-color: #4CAF50;
+            background-color: #2196F3;
             color: white;
         }
 
