--- a/templates/index.html
+++ b/templates/index.html
@@ -17,11 +17,12 @@
             padding: 30px 0;
         }
 
-        h1 {
+        h2 {
             text-align: center;
             color: #e0f0ff;
             align-self: flex-start;
             justify-self: flex-start;
+            margin-bottom: 35px;
         }
 
         .container {
@@ -106,7 +107,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>حجز موعد تصليح المركبة</h1>
+        <h2>حجز موعد تصليح المركبة</h2>
         
         <form id="booking-form">
             <label for="name">اسمك:</label>
