--- a/templates/index.html
+++ b/templates/index.html
@@ -109,20 +109,22 @@
     <div class="container">
         <h2>حجز موعد تصليح المركبة</h2>
         
-        <form id="booking-form">
-            <label for="name">اسمك:</label>
-            <input type="text" id="name" name="name" required><br>
-            
-            <label for="car_type">نوع المركبة:</label>
-            <input type="text" id="car_type" name="car_type" required><br>
+        <h2>حجز موعد</h2>
 
-            <label for="appointment_time">موعدك:</label>
-            <input type="datetime-local" id="appointment_time" name="appointment_time" required><br>
-
-            <button type="submit">حجز الموعد</button>
+        <form id="appointment-form">
+          <label for="name">اسمك:</label>
+          <input type="text" id="name" required>
+        
+          <label for="car_type">نوع السيارة:</label>
+          <input type="text" id="car_type" required>
+        
+          <label for="appointment_time">وقت الموعد:</label>
+          <input type="datetime-local" id="appointment_time" required>
+        
+          <button type="submit">احجز</button>
         </form>
-
-        <div id="response-message" class="message"></div>
+        
+        <div id="message" style="margin-top: 10px;"></div>
     </div>
 
     <script>
@@ -160,6 +162,6 @@
             }
           });
         });
-        </script>        
+        </script>               
 </body>
 </html>
