--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
 <body>
     <div class="container">
         <h2>حجز موعد تصليح المركبة</h2>
-        
+
         <form id="appointment-form">
           <label for="name">اسمك:</label>
           <input type="text" id="name" required>
@@ -123,6 +123,7 @@
         </form>
         
         <div id="message" style="margin-top: 10px;"></div>
+        <a href="status.html"></a>
     </div>
 
     <script>
