--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
         </form>
         
         <div id="message" style="margin-top: 10px;"></div>
-        <a href="check_status.html">تاكد من حالة الحجز</a>
+        <a href="/check_status">تاكد من حالة الحجز</a>
     </div>
 
     <script>
