--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>تسجيل دخول الإدمن</title>
     <style>
+        html {
+            direction: rtl;
+        }
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f7f7f7;
