--- a/templates/register.html
+++ b/templates/register.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>تسجيل حساب جديد</title>
     <style>
+        html {
+            direction: rtl;
+        }
         body {
             background-color: #181A1E;
             color: #e0f0ff;
