--- a/templates/check_status.html
+++ b/templates/check_status.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>تتبع حالة الحجز</title>
   <style>
+        html {
+            direction: rtl;
+        }
     body {
       background-color: #181A1E;
       color: #fff;
@@ -39,7 +42,7 @@
 <body>
 
     <h1>حالة حجزك</h1>
-    
+
     <div class="container">
         <h2>حالة حجزك يا {{ name }}</h2>
       
