--- a/templates/status.html
+++ b/templates/status.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <title>حالة الحجز</title>
     <style>
+        html {
+            direction: rtl;
+        }
         body {
             background-color: #181A1E;
             color: white;
