--- a/templates/admin.html
+++ b/templates/admin.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="5">
+    <meta http-equiv="refresh" content="20">
     <title>لوحة تحكم الكراج</title>
     <style>
         html {
@@ -71,11 +71,11 @@
             border: none;
             cursor: pointer;
             font-size: 16px;
-            border-radius: 5px;
+            border-radius: 0px;
         }
 
         .btn-danger:hover {
-            background-color: darkred;
+            background-color: rgb(170, 0, 0);
         }
     </style>
 </head>
