--- a/templates/index.html
+++ b/templates/index.html
@@ -87,6 +87,7 @@
             padding: 10px;
             border-radius: 8px;
             text-align: center;
+            color: rgb(11, 217, 11);
         }
 
         .approved {
