--- a/templates/chat.html
+++ b/templates/chat.html
@@ -4,15 +4,65 @@
     <meta charset="UTF-8">
     <title>تطبيق الدردشة</title>
     <style>
-        body { font-family: 'Tahoma'; background: #f9f9f9; padding: 20px; direction: rtl; }
-        .chat-box { max-width: 600px; margin: auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px #ccc; }
-        .messages { height: 300px; overflow-y: scroll; border: 1px solid #ccc; padding: 10px; margin-bottom: 10px; }
-        .message { margin-bottom: 10px; }
-        .message strong { color: #007bff; }
+        * {
+
+            font-family: sans-serif;
+        }
+        body {
+            background: #f9f9f9;
+            padding: 20px; direction: rtl;
+            background-image: linear-gradient(-40deg, #ff9e6a, #ff9e6a, #ffd4ad);
+            background-repeat: no-repeat;
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+        }
+        .messages { 
+            height: 300px; 
+            overflow-y: scroll; 
+            border: 1px solid #ffedde; 
+            padding: 10px; 
+            margin-bottom: 10px;
+        }
+        .message {
+            margin-bottom: 10px; 
+            color: #f9f9f9;
+            background-color: #1e1e1e;
+            border-radius: 10px;
+            padding: 25px 15px ;
+        }
+        .message strong { 
+            color: #007bff;
+         }
+
+        #chat-form{
+        position: fixed;
+        bottom: 30px;
+        }
+
+        input[type="text"],::placeholder{
+            word-wrap: break-word;
+            color: #f9f9f9;
+        }
+
+        input[type="text"], button[type="submit"]  {
+        padding: 15px;
+        background: #007bff;
+        backdrop-filter: blur(10px);
+        outline: none;
+        border: #1e1e1e solid 1px;
+        border-radius: 400px;
+        cursor: auto;
+        margin-left: 5px;
+        }
+
+        button[type="submit"]{
+            background-color: #007bff;
+            color: #f9f9f9;
+        }
     </style>
 </head>
 <body>
-    <h2>الدردشة</h2>
     <div id="messages"></div>
     <form id="chat-form">
         <input type="text" id="message" placeholder="أدخل رسالتك هنا..." required>
