--- a/templates/chat.html
+++ b/templates/chat.html
@@ -8,6 +8,10 @@
 
             font-family: sans-serif;
         }
+
+        html {
+            direction: rtl;
+        }
         body {
             background: #f9f9f9;
             padding: 20px; direction: rtl;
@@ -21,13 +25,12 @@
             height: 300px; 
             overflow-y: scroll; 
             border: 1px solid #ffedde; 
-            padding: 10px; 
-            margin-bottom: 10px;
+            justify-content: flex-start;
         }
-        .message {
+        .messages {
             margin-bottom: 10px; 
             color: #f9f9f9;
-            background-color: #1e1e1e;
+            background-color: #1e1e1e57;
             border-radius: 10px;
             padding: 25px 15px ;
         }
